--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 <body>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<div class = "container">
+		<div class = "barMenu">
+			<div class = "nowButton">
+				<h3 class = "buttonText">Now</h3>
+			</div>
+			<div class = "hourlyButton">
+				<h3 class = "buttonText">Hourly</h3>
+			</div>
+			<div class = "dailyButton">
+				<h3 class = "buttonText">Daily</h3>
+			</div>
+		</div>
+		<div class = "display">
+		<div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="./scripts/script.js"></script>
 
 </body>
